--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryTextColor">#212121</color>
+    <color name="inputFieldColor">#E0E0E0</color>
+    <color name="buttonColor">#3F51B5</color>
+    <color name="linkColor">#FF4081</color>
+    <color name="backgroundColor">#FAFAFA</color>
+    <color name="light_gray">#D3D3D3</color>
+    <color name="teal_700">#179898</color>
 </resources>
