--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".ProfileFragment">
+    tools:context=".fragments.ProfileFragment">
 
     <TextView
         android:id="@+id/beautiful_textview"
